source/index.scss
:root {
  --color-primary: rgb(62, 217, 154);
  --color-neutral: rgb(150, 167, 175);
  --color-dark-one: rgb(31, 46, 53);
  --color-dark-two: rgb(39, 57, 65);
  --color-dark-tree: rgb(71, 94, 105);
  --color-light-one: rgba(255, 255, 255, 0.05);
  --color-light-two: rgb(202, 201, 201);
}

@mixin flex-center() {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  text-align: center;
}
@mixin area() {
  background-color: var(--color-dark-tree);
  width: 100%;
  padding: 5px 10px;
  border: none;
  border-radius: 12px;
  box-sizing: border-box;
  margin-top: 6px;
  margin-bottom: 16px;
  resize: vertical;
}
@mixin section-title() {
  position: absolute;
  z-index: -1;
  background: linear-gradient(
    180deg,
    rgba(62, 217, 154, 0.9),
    rgba(45, 164, 116, 0.9),
    rgba(20, 29, 34, 0.9)
  );
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
  // filter: drop-shadow(-5px -5px 5px rgba(0, 0, 0, 0.3));
  filter: drop-shadow(8px 8px 2px rgba(0, 0, 0, 0.3));

  font-weight: 700;
  font-size: 5em;
  line-height: 1.8em;
  top: 0%;
  left: 50%;
  transform: translate(-50%, -50%);
}
@mixin triangle() {
  #triangle1,
  #triangle2,
  #triangle3 {
    display: none;
  }
}

* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

html {
  // background: var(--color-dark-one);
  color: var(--color-light-two);
  font-family: "Lora", serif;
  font-style: normal;

  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  @include flex-center();
  background: linear-gradient(
    0deg,
    rgb(24, 35, 42),
    rgba(27, 40, 46, 0.887),
    rgba(31, 46, 53, 0.887),
    rgba(27, 40, 46, 0.887),
    rgba(31, 46, 53, 0.944),
    rgba(24, 35, 42, 0.999)
  );
}
body {
  max-width: 75em;
  -ms-overflow-style: none; /* IE and Edge */
  scrollbar-width: none;
}
body::-webkit-scrollbar {
  display: none;
}

// head,
body,
footer {
  height: 100%;
  width: 100%;
}

header {
  display: flex;
  flex-direction: column;
  align-items: center;

  // shadow
  fill: var(--color-primary);
  filter: drop-shadow(8px 8px 2px rgba(0, 0, 0, 0.3));

  img {
    width: 2.5em;
  }
  #brand {
    margin: 0 2.5em;

    #logo {
      display: flex;
      align-items: center;
      img {
        transform: rotateY(0deg);
        transition: all 500ms ease;
      }
    }
    #logo {
      img.active {
        transform: rotateY(360deg);
        transition: all 500ms ease;
      }
    }
    h1 {
      margin: 0 0.5em 0;
      color: rgba(63, 219, 156, 1);
    }
  }
  #menu {
    width: 100%;
    display: flex;
    justify-content: space-evenly;
    position: fixed;
    top: -100%;
    transition: all 500ms ease;
    a {
      width: -webkit-fill-available;
      width: -moz-fill-available;
      color: #3ed99a00;
      margin: 0.6em 0 0.3em;
      font-size: x-large;
      font-weight: 700;
      transition: all 250ms ease;
    }
  }
  #menu-v {
    width: -webkit-fill-available;
    width: -moz-fill-available;
    display: flex;
    justify-content: center;
    position: fixed;
    top: 70%;
    transition: all 500ms ease;
    img {
      transition: all 500ms ease;
    }
  }
  #menu.active {
    top: 100%;
    transition: all 500ms ease;
    a {
      color: #3ed99a;
      transition: all 500ms ease-in;
      &:hover {
        color: #ffffff;
        transition: all 250ms ease;
      }
    }
  }
  #menu-v.active {
    top: 170%;
    margin-bottom: 20%;
    img.active {
      transform: rotateZ(180deg);
      transform: rotateX(180deg);
      transition: all 500ms ease;
    }
  }
}

.content {
  position: relative;
  width: 100%;
}

.button {
  padding: 0 0.6em;
  height: 1.3em;
  background: var(--color-primary);
  border-radius: 0.8em;
  border: none;
  cursor: pointer;
  &:hover {
    background-color: rgb(53, 255, 207, 0.49);
  }
}
.triangle {
  position: absolute;
  width: 100%;
  height: 0;
  border-style: solid;
  border-color: transparent #d9d9d9 transparent;
  opacity: 0.5;
  left: 0;
  top: 0;
}

.section {
  @include section-title();
}

.rotate {
  transform: rotateX(180deg);
  transform: rotateZ(180deg);
}

a {
  text-decoration: none;
  color: var(--color-light-two);
  &:visited {
    text-decoration: none;
  }
}

#hero,
#projects,
#about,
#contact {
  min-height: calc(100vh / 3);
}

#projects,
#about,
#contact {
  margin: 35vw 0 0;
}

#hero {
  @include flex-center();
  gap: 3em;
  transition: all 500ms ease;
  h1 {
    display: flex;
    justify-content: center;
    color: #ffffff;
  }
}

#hero.active {
  margin-top: 25%;
  transition: all 500ms ease;
}

#about {
  @include flex-center();
  // margin: 5em 0 3em;
  .content {
    max-width: 80%;
    .section {
      width: max-content;
    }

    p {
      padding: 1em;
      border-radius: 1em;
      background-color: rgba(0, 0, 0, 0.18);
      box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2),
        0 6px 20px 0 rgba(0, 0, 0, 0.19);
      margin: 1em;
      word-wrap: break-word;
      hyphens: auto;

      text-align: justify;
      word-wrap: break-word;
      white-space: normal;
    }
  }
}

#projects {
  @include flex-center();
  .content {
    max-width: 80%;
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    margin-top: 2em;

    .project {
      max-width: 45%;
      flex-wrap: wrap;
      flex-direction: row;
      justify-content: center;
      display: flex;
      padding: 1em;
      margin: 1em;
      gap: 1em;
      border-radius: 1em;
      background-color: rgba(0, 0, 0, 0.18);
      box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2),
        0 6px 20px 0 rgba(0, 0, 0, 0.19);
      .detail {
        flex-grow: 0;
        p {
          padding-bottom: 0.5em;
        }
      }
    }
  }
}

#contact {
  @include flex-center();

  #contact_form {
    padding: 1.2em;
    display: none;
  }
}
footer {
  padding: 1.2em 0 0.2em;

  p {
    margin-bottom: 1.25em;
  }
}

@media screen and (max-width: 480px) {
  * {
    p {
      font-size: 1em;
    }
  }
  header {
    margin-top: 0.25em;
    justify-content: space-between;
    #brand {
      #logo {
        min-width: 14em;
      }

      h1 {
        font-size: large;
      }
    }
    #menu {
      a {
        font-size: large;
      }
    }

    #menu-v.active {
      top: 200%;
    }
  }

  #hero {
    min-height: 0;
    #triangle1 {
      z-index: 1;
      border-width: 0 0 2vh 100vw;
    }
    #triangle2 {
      z-index: 2;
      border-width: 0 0 5vh 100vw;
    }
    #triangle3 {
      z-index: 3;
      border-width: 0 0 7vh 100vw;
    }
    h1 {
      margin: 5em 0;
    }
  }

  #about {
    .content {
      max-width: none;
    }
  }

  #projects {
    .content {
      max-width: none;
      .project {
        max-width: none;
        flex-wrap: nowrap;
        align-items: center;
      }
    }
  }
  .section {
    font-size: 4em;
  }
}
@media screen and (min-width: 481px) and (max-width: 768px) {
  #about,
  footer {
    p {
      font-size: 1em;
    }
  }
  header {
    margin-top: 0.5em;
    justify-content: space-evenly;
    #brand {
      #logo {
        min-width: 17.5em;
      }
      h1 {
        font-size: x-large;
      }
    }
    #menu-v.active {
      top: 220%;
    }
  }
  #hero {
    min-height: 0;
    #triangle1 {
      z-index: 1;
      border-width: 0 0 1.5vh 100vw;
    }
    #triangle2 {
      z-index: 2;
      border-width: 0 0 3vh 100vw;
    }
    #triangle3 {
      z-index: 3;
      border-width: 0 0 5vh 100vw;
    }
    h1 {
      margin: 5em 0;
    }
  }
  #projects {
    .content {
      .project {
        max-width: none;
        flex-wrap: nowrap;
        align-items: center;
      }
    }
  }
  .section {
    font-size: 5em;
  }
}
@media screen and (min-width: 769px) and (max-width: 1024px) {
  @include triangle();

  #projects,
  #about,
  #contact {
    margin: 25vw 0 0;
  }

  #about,
  footer {
    p {
      font-size: 1.2em;
    }
  }
  header {
    margin-top: 1em;
    justify-content: space-around;

    img {
      width: 3.5em;
    }
    #brand {
      #logo {
        min-width: 23.5em;
      }
      h1 {
        font-size: xx-large;
      }
    }
    #menu-v.active {
      top: 200%;
    }
  }

  #projects {
    .content {
      .project {
        max-width: 44%;
        flex-wrap: wrap;
        align-items: center;
      }
    }
  }
  .section {
    font-size: 6em;
  }
}
@media screen and (min-width: 1025px) {
  @include triangle();

  #projects,
  #about,
  #contact {
    margin: 20vw 0 0;
  }

  #about,
  footer {
    p {
      font-size: 1.5em;
    }
  }
  header {
    margin-top: 1.25em;
    justify-content: space-around;
    img {
      width: 6.25em;
    }
    #brand {
      #logo {
        min-width: 31.25em;
      }
      h1 {
        margin: 0 0.5em 0;
        font-size: 2.5em;
      }
    }
  }

  #projects {
    .content {
      :nth-last-child(odd) {
        flex-direction: row-reverse;
        margin-right: 0;
      }
      :nth-child(even) {
        margin-left: 0;
      }
      .project {
        flex-wrap: nowrap;
        align-items: center;
      }
    }
  }
  .section {
    font-size: 7em;
  }
}

.media {
  a {
    svg {
      margin: 2em;
      fill: var(--color-primary);
      filter: drop-shadow(8px 8px 1px rgba(0, 0, 0, 0.3));
    }
  }
}

/* Content form */
input[type="text"],
textarea {
  @include area();
  &::placeholder {
    color: rgb(53, 255, 207, 0.49);
  }
}

input[type="submit"] {
  &:hover {
    background-color: rgb(53, 255, 207, 0.49);
  }
}

